test/Harper/Tests/Bad/issue3_modZero.har
main = f 0;

f n = 42 mod n;