test/Harper/Tests/Bad/issue3_modZero.out
Error: expression `n` evaluated to zero causing a division error.
During evaluation of:
 42 mod n 
Located at line 3 column 7

Execution terminated with an error: runtime error.